<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/se.orourke.wetfags"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <RelativeLayout
        android:id="@+id/wetfags_rel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <se.orourke.wetfags.TitleDetailValueView
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            app:detailText="@string/w_lt_1_formula"
            app:titleText="@string/w_label"
            app:valueText="@string/unknown_val" />
        
        <se.orourke.wetfags.TitleDetailValueView
            android:id="@+id/energy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/weight"
            app:detailText="@string/e_formula"
            app:titleText="@string/e_label"
            app:valueText="@string/unknown_val" />
        
        <se.orourke.wetfags.TitleDetailValueView
            android:id="@+id/tube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/energy"
            app:detailText="@string/t_formula"
            app:titleText="@string/t_label"
            app:valueText="@string/unknown_val" />
        
        <se.orourke.wetfags.TitleDetailValueView
            android:id="@+id/fluids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tube"
            app:detailText="@string/f_formula"
            app:titleText="@string/f_label"
            app:valueText="@string/unknown_val" />
        
        <se.orourke.wetfags.TitleDetailValueView
            android:id="@+id/adrenaline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/fluids"
            app:detailText="@string/a_formula"
            app:titleText="@string/a_label"
            app:valueText="@string/unknown_val" />
        
        <se.orourke.wetfags.TitleDetailValueView
            android:id="@+id/glucose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/adrenaline"
            app:detailText="@string/g_formula"
            app:titleText="@string/g_label"
            app:valueText="@string/unknown_val" />
        
        <se.orourke.wetfags.TitleDetailValueView
            android:id="@+id/stesolid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/glucose"
            app:detailText="@string/s_iv_formula"
            app:titleText="@string/s_label"
            app:valueText="@string/unknown_val" />
        
        <se.orourke.wetfags.TitleDetailValueView
            android:id="@+id/stesolid_pr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/stesolid"
            app:detailText="@string/s_pr_formula"
            app:hideTitle="true"
            app:titleText="@string/s_label"
            app:valueText="@string/unknown_val" />
    </RelativeLayout>

</ScrollView>