<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res/se.orourke.wetfags">

    <RelativeLayout
        android:id="@+id/parameters_rel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <se.orourke.wetfags.TitleDetailValueView
            android:id="@+id/breathing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            app:detailText="@string/breathing_detail"
            app:titleText="@string/breathing_label"
            app:valueText="@string/unknown_val" />

        <se.orourke.wetfags.TitleDetailValueView
            android:id="@+id/heart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/breathing"
            app:detailText="@string/heart_detail"
            app:titleText="@string/heart_label"
            app:valueText="@string/unknown_val" />
            
        <se.orourke.wetfags.TitleDetailValueView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/heart"
            app:detailText="@string/pressure_detail"
            app:titleText="@string/pressure_label"
            app:valueText="@string/unknown_val" />

    </RelativeLayout>

</ScrollView>
