<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/weightAgeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:selectAllOnFocus="true" >

            <requestFocus />
        </EditText>

        <RadioGroup
            android:id="@+id/monthsYearsKgRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/monthsRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/months_btn_label" />

            <RadioButton
                android:id="@+id/yearsRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/years_btn_label" />

            <RadioButton
                android:id="@+id/kgRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg_btn_label" />
        </RadioGroup>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/w_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/w_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/w_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/w_label"
                android:gravity="right"
                android:text="@string/unknown_val"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/w_formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/w_value"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/w_value"
                android:text="@string/w_lt_1_formula"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/e_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/w_value"
                android:text="@string/e_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/e_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/e_label"
                android:gravity="right"
                android:text="@string/unknown_val"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/e_formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/e_value"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/e_value"
                android:text="@string/e_formula"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/t_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/e_value"
                android:text="@string/t_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/t_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/t_label"
                android:gravity="right"
                android:text="@string/unknown_val"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/t_formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/t_value"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/t_value"
                android:text="@string/t_formula"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/f_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/t_value"
                android:text="@string/f_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/f_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/f_label"
                android:gravity="right"
                android:text="@string/unknown_val"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/f_formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/f_value"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/f_value"
                android:text="@string/f_formula"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/a_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/f_value"
                android:text="@string/a_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/a_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/a_label"
                android:gravity="right"
                android:text="@string/unknown_val"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/a_formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/a_value"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/a_value"
                android:text="@string/a_formula"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/g_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/a_value"
                android:text="@string/g_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/g_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/g_label"
                android:gravity="right"
                android:text="@string/unknown_val"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/g_formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/g_value"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/g_value"
                android:text="@string/g_formula"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/s_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/g_value"
                android:text="@string/s_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/s_iv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/s_label"
                android:gravity="right"
                android:text="@string/unknown_val"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/s_iv_formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/s_iv_value"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/s_iv_value"
                android:text="@string/s_iv_formula"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/s_pr_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/s_iv_value"
                android:gravity="right"
                android:text="@string/unknown_val"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/s_pr_formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/s_pr_value"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/s_pr_value"
                android:text="@string/s_pr_formula"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/a1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/s_pr_value"
                android:text="@string/a_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/a1_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/a1_label"
                android:text="@string/a1_format"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/a1_formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/a1_value"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/a1_value"
                android:text="@string/a1_formula"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/a2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/a1_value"
                android:text="@string/a2_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/a2_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/a2_label"
                android:text="@string/unknown_val"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/a2_formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/a2_value"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/a2_value"
                android:text="@string/a2_formula"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/a3_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/a2_value"
                android:text="@string/a3_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/a3_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/a3_label"
                android:text="@string/a3_format"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/a3_formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/a3_value"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/a3_value"
                android:text="@string/a3_formula"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/a4_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/a3_value"
                android:text="@string/a4_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/a4_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/a4_label"
                android:text="@string/unknown_val"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/a4_formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/a4_value"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/a4_value"
                android:text="@string/a4_formula"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/a5_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/a4_value"
                android:text="@string/a5_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/a5_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/a5_label"
                android:text="@string/unknown_val"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/a5_formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/a5_value"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/a5_value"
                android:text="@string/a5_formula"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            </RelativeLayout>

    </ScrollView>

</LinearLayout>